force-app/main/default/objects/kpi_management_MatterPort__c/kpi_management_MatterPort__c.object-meta.xml
<CustomObject>
    <label>MatterPort進捗管理</label>
    <nameField>
        <label>名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>