force-app/main/default/objects/kpi_management_MatterPort__c/fields/ar_estimate__c.field-meta.xml
<CustomField>
    <fullName>ar_estimate__c</fullName>
    <formula>if(OR(isblank(target_estimate_from_web__c), target_estimate_from_web__c==0), NULL,  estimate__c / target_estimate_from_web__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見積数目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>