force-app/main/default/objects/kpi_management_MatterPort__c/fields/ar_lead__c.field-meta.xml
<CustomField>
    <fullName>ar_lead__c</fullName>
    <formula>if(OR(isblank(target_lead__c), target_lead__c==0), NULL,  lead__c / target_lead__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リードCV目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>