force-app/main/default/objects/kpi_management_MatterPort__c/fields/ar_opp__c.field-meta.xml
<CustomField>
    <fullName>ar_opp__c</fullName>
    <formula>if(or(isblank(target_opp_from_web__c), target_opp_from_web__c==0), 0,  opp__c / target_opp_from_web__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談数目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>