force-app/main/default/objects/kpi_management_MatterPort__c/fields/ar_opp_cvr__c.field-meta.xml
<CustomField>
    <fullName>ar_opp_cvr__c</fullName>
    <formula>if(OR(isblank(target_opp_cvr__c), target_opp_cvr__c==0), NULL,  opp_cvr__c / target_opp_cvr__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談化率目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>