force-app/main/default/objects/kpi_management_MatterPort__c/fields/ar_order__c.field-meta.xml
<CustomField>
    <fullName>ar_order__c</fullName>
    <formula>if(OR(isblank(target_order__c), target_order__c==0), NULL,  order__c / target_order__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL受注数目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>