force-app/main/default/objects/kpi_management_MatterPort__c/fields/ar_order_from_web__c.field-meta.xml
<CustomField>
    <fullName>ar_order_from_web__c</fullName>
    <formula>if(OR(isblank(target_order_from_web__c), target_order_from_web__c==0), NULL,  order_from_web__c / target_order_from_web__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>