force-app/main/default/objects/kpi_management_MatterPort__c/fields/ar_session__c.field-meta.xml
<CustomField>
    <fullName>ar_session__c</fullName>
    <formula>if(OR(isblank(target_session__c), target_session__c==0), NULL,  session__c /  target_session__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>セッション目標達成率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>