force-app/main/default/objects/kpi_management_MatterPort__c/fields/estimate__c.field-meta.xml
<CustomField>
    <fullName>estimate__c</fullName>
    <label>見積数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>