force-app/main/default/objects/kpi_management_MatterPort__c/fields/lead__c.field-meta.xml
<CustomField>
    <fullName>lead__c</fullName>
    <formula>lead_inquiry__c+lead_requeat__c+lead_demo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リードCV(問合せCV+mCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>