force-app/main/default/objects/kpi_management_MatterPort__c/fields/lead_cvr__c.field-meta.xml
<CustomField>
    <fullName>lead_cvr__c</fullName>
    <formula>if(OR(isblank(session__c), session__c == 0), 0,   lead__c / session__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リードCVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>