force-app/main/default/objects/kpi_management_MatterPort__c/fields/lead_demo__c.field-meta.xml
<CustomField>
    <fullName>lead_demo__c</fullName>
    <label>デモ会CV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>