force-app/main/default/objects/kpi_management_MatterPort__c/fields/lead_inquiry__c.field-meta.xml
<CustomField>
    <fullName>lead_inquiry__c</fullName>
    <label>問合せCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>