force-app/main/default/objects/kpi_management_MatterPort__c/fields/lead_requeat__c.field-meta.xml
<CustomField>
    <fullName>lead_requeat__c</fullName>
    <label>資料請求CV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>