force-app/main/default/objects/kpi_management_MatterPort__c/fields/opp__c.field-meta.xml
<CustomField>
    <fullName>opp__c</fullName>
    <label>商談数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>