force-app/main/default/objects/kpi_management_MatterPort__c/fields/opp_cvr__c.field-meta.xml
<CustomField>
    <fullName>opp_cvr__c</fullName>
    <formula>if(isblank(lead__c), NULL,  opp__c / lead__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談化率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>