force-app/main/default/objects/kpi_management_MatterPort__c/fields/order__c.field-meta.xml
<CustomField>
    <fullName>order__c</fullName>
    <label>TOTAL受注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>