force-app/main/default/objects/kpi_management_MatterPort__c/fields/order_from_nonweb__c.field-meta.xml
<CustomField>
    <fullName>order_from_nonweb__c</fullName>
    <label>WEB以外受注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>