force-app/main/default/objects/kpi_management_MatterPort__c/fields/session__c.field-meta.xml
<CustomField>
    <fullName>session__c</fullName>
    <label>セッション数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>