force-app/main/default/objects/kpi_management_MatterPort__c/fields/session_from_ads__c.field-meta.xml
<CustomField>
    <fullName>session_from_ads__c</fullName>
    <label>広告セッション数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>