force-app/main/default/objects/kpi_management_MatterPort__c/fields/target_lead__c.field-meta.xml
<CustomField>
    <fullName>target_lead__c</fullName>
    <label>リードCV目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>