force-app/main/default/objects/kpi_management_MatterPort__c/fields/target_lead_cvr__c.field-meta.xml
<CustomField>
    <fullName>target_lead_cvr__c</fullName>
    <label>リードCVR目標</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>