force-app/main/default/objects/kpi_management_MatterPort__c/fields/target_month__c.field-meta.xml
<CustomField>
    <fullName>target_month__c</fullName>
    <label>対象月(*月初日付)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>