force-app/main/default/objects/kpi_management_MatterPort__c/fields/target_order_from_web__c.field-meta.xml
<CustomField>
    <fullName>target_order_from_web__c</fullName>
    <label>WEBからの受注数目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>